[project]
name = "hypermedia"
version = "5.4.0"
description = "An opinionated way to work with html in pure python with htmx support."
readme = {file = "README.md", content-type = "text/markdown"}
license = {"text" = "MIT"}
requires-python = ">=3.9"
keywords = ["HTML", "HTMX", "Extendable", "Partial HTML", "HTML Templating", "FastAPI"]
authors = [
    { name = "Thomas Borgen", email = "thomas@borgenit.no" },
]

dependencies = [
    "typing-extensions>=4.12.2",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/thomasborgen/hypermedia"
Documentation = "https://github.com/thomasborgen/hypermedia"
Repository = "https://github.com/thomasborgen/hypermedia"
Changelog = "https://github.com/thomasborgen/hypermedia/blob/main/CHANGELOG.md"


[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic/*",
]
select = [
    # Regular flake8 rules
    "C", "E", "F", "W", "S",
    # flake8-bugbear rules
    "B",
    # extra flake rules
    "YTT",
    # Import sorting rules (isort replacement)
    "I",
    # Pylint rules
    "PLC", "PLE", "PLR", "PLW",
    # ruff rules
    "RUF",
    # Docstyle
    "D",
    # Max camplexity
    "C90",
]

ignore = [
    "D100", # Docstring in modules
    "D203", # Incompatible with D211
    "D213", # Incompatible with D212
    "D107", # Missing docstring in __init__
]

fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"**/{tests}/*" = [
    "D103", # Allow missing docstring in functions
    "S101", # Allow asserts
    "S106", # Allow hardcorded passwords in tests
]
"**/conftest.py" = [
    "F811", # Allow redefinition (imported fixtures)
]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 6.
max-complexity = 6

[tool.ruff.lint.pylint]
max-public-methods = 8

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
plugins = []

exclude = [
    "tests/*"
]

# follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["google.*"]
follow_untyped_imports = true
ignore_errors = true

[tool.pytest.ini_options]
# py.test options:
norecursedirs = ["*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
testpaths = [
    "tests",
]
pythonpath = ["."]
